[package]
name = "loxrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["tree_walk_interpreter", "bytecode_virtual_machine"]

[dependencies]
tree_walk_interpreter = {path="tree_walk_interpreter"}
bytecode_virtual_machine = {path="bytecode_virtual_machine"}

[features]
treewalk = []


